--- a/style.css
+++ b/style.css
@@ -198,6 +198,8 @@ body {
   height: auto;
 }
 #Infomation .infoContentsWrapp .infoContents .proIgm img {
+  border-radius: 2px;
+  border: 0.3px solid rgb(76, 79, 96);
   width: 100%;
   height: 460px;
   background: center/no-repeat;
@@ -329,6 +331,8 @@ body {
 #Footer .App img {
   width: 60px;
   height: 60px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 #Footer .App span {
   width: 35px;
