--- a/style.scss
+++ b/style.scss
@@ -166,6 +166,8 @@ body {
         width: 100%;
         height: auto;
         img {
+          border-radius: 2px;
+          border: 0.3px solid rgb(76, 79, 96);
           width: 100%;
           height: 460px;
           background: center/ no-repeat;
@@ -293,9 +295,11 @@ body {
   .App {
     display: flex;
     gap: 60px;
+
     img {
       width: 60px;
       height: 60px;
+      object-fit: contain;
     }
     span {
       width: 35px;
