--- a/threads.css
+++ b/threads.css
@@ -1,6 +1,7 @@
 @import url(./threadsreset.css);
 .pageTitle {
   font-size: 1.2rem;
+  font-weight: normal;
   padding-top: 20px;
 }
 
@@ -25,48 +26,288 @@
   overflow: hidden;
 }
 #bg .bgcontentsWrapp {
-  padding: 80px 0;
+  margin-top: 80px;
+  padding: 40px 20px 80px;
   display: flex;
   align-items: start;
-  justify-content: space-around;
+  gap: 120px;
+  background: #000;
+  border-radius: 16px;
 }
 #bg .bgdescWrapp {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
 }
 #bg .bgdescWrapp .bgTitle {
   font-size: 1.1rem;
+  color: #fff;
 }
 #bg .bgdescWrapp .bgdescinfo {
   font-size: 0.8rem;
-  color: #232323;
+  color: #c3c3c3;
 }
 #bg .bgprocessWrapp {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
 }
 #bg .bgprocessWrapp .bgTitle {
   font-size: 1.1rem;
+  color: #fff;
 }
 #bg .bgprocessWrapp .infos {
   display: flex;
   flex-direction: column;
   gap: 6px;
   font-size: 0.8rem;
+  color: #c3c3c3;
 }
 #bg .toolWrapp {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
 }
 #bg .toolWrapp .bgTitle {
   font-size: 1.1rem;
+  color: #fff;
 }
 #bg .toolWrapp .tools {
   display: flex;
   flex-direction: column;
   gap: 6px;
   font-size: 0.8rem;
+  color: #c3c3c3;
+}
+
+#research {
+  width: 100%;
+  padding: 40px 20px;
+  overflow: hidden;
+}
+#research .textWrapp {
+  display: flex;
+  flex-direction: column;
+  padding: 80px 0;
+  gap: 20px;
+}
+#research .textWrapp .maintxt {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+#research .textWrapp .subtxt {
+  font-size: 0.8rem;
+  font-weight: normal;
+  color: #666;
+}
+#research .researchContentsWrapp {
+  display: flex;
+  justify-content: space-around;
+}
+#research .researchContentsWrapp .imgBox {
+  width: auto;
+  height: auto;
+  border-radius: 16px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+#interview {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px 20px;
+}
+#interview .userBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background: #000;
+  padding: 15px;
+  border-radius: 16px;
+  gap: 30px;
+}
+#interview .userBox .useinterview {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+#interview .userBox .useinterview .maintxt {
+  font-size: 1.6rem;
+  color: #fff;
+}
+#interview .userBox .useinterview .subtxt {
+  font-size: 0.8rem;
+  font-weight: 200;
+  color: #fff;
+}
+#interview .userBox .userconditionWrapp {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#interview .userBox .userconditionWrapp .interviewTitle {
+  font-size: 0.8rem;
+  font-weight: 400;
+  color: #fff;
+}
+#interview .userBox .userconditionWrapp .interviewItems {
+  display: flex;
+  gap: 10px;
+}
+#interview .userBox .userconditionWrapp .interviewItems .interviewItem {
+  font-size: 0.7rem;
+  color: #000000;
+  padding: 4px 12px;
+  background: #ccc;
+  border-radius: 16px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+#interview .userBox .userconditionWrapp .interviewItems .interviewItem:hover {
+  background: #212121;
+  color: #fff;
+}
+#interview .userBox .userImgWrapp {
+  display: flex;
+  gap: 10px;
+  overflow: hidden;
+}
+#interview .userBox .userImgWrapp .userImg {
+  position: relative;
+}
+#interview .userBox .userImgWrapp .userImg .userInfo {
+  position: absolute;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-100%);
+  transition: all 0.5s;
+}
+#interview .userBox .userImgWrapp .userImg .userInfo div {
+  opacity: 1;
+  color: #fff;
+  font-size: 0.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+#interview .userBox .userImgWrapp .userImg:hover .userInfo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background: #171717;
+  border-radius: 8px;
+  transform: translateY(0);
+}
+#interview .userBox .userImgWrapp .userImg:hover .userInfo div {
+  opacity: 1;
+  color: #fff;
+}
+#interview .problemBox {
+  width: 467px;
+  display: flex;
+  flex-direction: column;
+  background: #f3f3f3;
+  padding: 15px;
+  border-radius: 16px;
+  gap: 30px;
+}
+#interview .problemBox .problemMain {
+  font-size: 1.6rem;
+}
+#interview .problemBox .problemWrapp {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  padding-top: 40px;
+}
+#interview .problemBox .problems {
+  display: flex;
+  gap: 20px;
+}
+#interview .problemBox .problemLogo {
+  padding-left: 340px;
+  display: flex;
+}
+#interview .problemBox .problemLogo img {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+#asistobe {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px 20px;
+}
+#asistobe .problemBox {
+  display: flex;
+  flex-direction: column;
+  background: #f3f3f3;
+  padding: 15px;
+  border-radius: 16px;
+}
+#asistobe .problemBox .problemMain {
+  font-size: 1.6rem;
+  color: #666;
+}
+#asistobe .problemBox .problemWrapp {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-top: 40px;
+}
+#asistobe .problemBox .problems {
+  display: flex;
+  gap: 12px;
+}
+#asistobe .problemBox .problems .problem {
+  font-size: 0.8rem;
+  color: #666;
+}
+#asistobe .solutionBOx {
+  display: flex;
+  flex-direction: column;
+  background: #f3f3f3;
+  padding: 30px 20px;
+  border-radius: 16px;
+  gap: 30px;
+}
+#asistobe .solutionBOx .solTitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#asistobe .solutionBOx .solTitle .solMain {
+  font-size: 3.2rem;
+  font-weight: 500;
+}
+#asistobe .solutionBOx .solTitle .tobe {
+  font-size: 1.2rem;
+  font-weight: 600;
+  padding-right: 20px;
+  color: #666;
+}
+#asistobe .solutionBOx .solWrapp {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 50px;
+  padding: 30px 0;
+}
+#asistobe .solutionBOx .solutions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+#asistobe .solutionBOx .solutions .solution {
+  font-size: 1rem;
 }
