--- a/threads.scss
+++ b/threads.scss
@@ -1,6 +1,7 @@
 @import url(./threadsreset.css);
 .pageTitle {
   font-size: 1.2rem;
+  font-weight: normal;
   padding-top: 20px;
 }
 #innerWrapp {
@@ -23,49 +24,288 @@
   padding: 40px 20px;
   overflow: hidden;
   .bgcontentsWrapp {
-    padding: 80px 0;
+    margin-top: 80px;
+    padding: 40px 20px 80px;
     display: flex;
     align-items: start;
-    justify-content: space-around;
+    gap: 120px;
+    background: #000;
+    border-radius: 16px;
   }
   .bgdescWrapp {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     .bgTitle {
       font-size: 1.1rem;
+      color: #fff;
     }
     .bgdescinfo {
       font-size: 0.8rem;
-      color: #232323;
+      color: #c3c3c3;
     }
   }
   .bgprocessWrapp {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     .bgTitle {
       font-size: 1.1rem;
+      color: #fff;
     }
     .infos {
       display: flex;
       flex-direction: column;
       gap: 6px;
       font-size: 0.8rem;
+      color: #c3c3c3;
     }
   }
   .toolWrapp {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     .bgTitle {
       font-size: 1.1rem;
+      color: #fff;
     }
     .tools {
       display: flex;
       flex-direction: column;
       gap: 6px;
       font-size: 0.8rem;
+      color: #c3c3c3;
+    }
+  }
+}
+#research {
+  width: 100%;
+  padding: 40px 20px;
+  overflow: hidden;
+  .textWrapp {
+    display: flex;
+    flex-direction: column;
+    padding: 80px 0;
+    gap: 20px;
+    .maintxt {
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+    .subtxt {
+      font-size: 0.8rem;
+      font-weight: normal;
+      color: #666;
+    }
+  }
+  .researchContentsWrapp {
+    display: flex;
+    justify-content: space-around;
+    .imgBox {
+      width: auto;
+      height: auto;
+      border-radius: 16px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: all 0.5s;
+    }
+  }
+}
+#interview {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px 20px;
+  .userBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background: #000;
+    padding: 15px;
+    border-radius: 16px;
+    gap: 30px;
+    .useinterview {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      .maintxt {
+        font-size: 1.6rem;
+        color: #fff;
+      }
+      .subtxt {
+        font-size: 0.8rem;
+        font-weight: 200;
+        color: #fff;
+      }
+    }
+    .userconditionWrapp {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .interviewTitle {
+        font-size: 0.8rem;
+        font-weight: 400;
+        color: #fff;
+      }
+      .interviewItems {
+        display: flex;
+        gap: 10px;
+        .interviewItem {
+          font-size: 0.7rem;
+          color: #000000;
+          padding: 4px 12px;
+          background: #ccc;
+          border-radius: 16px;
+          transition: all 0.5s;
+          cursor: pointer;
+          &:hover {
+            background: #212121;
+            color: #fff;
+          }
+        }
+      }
+    }
+    .userImgWrapp {
+      display: flex;
+      gap: 10px;
+      overflow: hidden;
+      .userImg {
+        position: relative;
+        .userInfo {
+          position: absolute;
+          padding: 10px;
+          width: 100%;
+          height: 100%;
+          transform: translateY(-100%);
+          div {
+            opacity: 1;
+            color: #fff;
+            font-size: 0.8rem;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+          }
+          transition: all 0.5s;
+        }
+        &:hover {
+          .userInfo {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            padding: 10px;
+            background: #171717;
+            border-radius: 8px;
+            transform: translateY(0);
+            div {
+              opacity: 1;
+              color: #fff;
+            }
+          }
+        }
+      }
+    }
+  }
+  .problemBox {
+    width: 467px;
+    display: flex;
+    flex-direction: column;
+    background: #f3f3f3;
+    padding: 15px;
+    border-radius: 16px;
+    gap: 30px;
+    .problemMain {
+      font-size: 1.6rem;
+    }
+    .problemWrapp {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      padding-top: 40px;
+    }
+    .problems {
+      display: flex;
+      gap: 20px;
+    }
+    .problemLogo {
+      padding-left: 340px;
+      display: flex;
+      img {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+      }
+    }
+  }
+}
+#asistobe {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px 20px;
+  .problemBox {
+    display: flex;
+    flex-direction: column;
+    background: #f3f3f3;
+    padding: 15px;
+    border-radius: 16px;
+    .problemMain {
+      font-size: 1.6rem;
+      color: #666;
+    }
+    .problemWrapp {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+      padding-top: 40px;
+    }
+    .problems {
+      display: flex;
+      gap: 12px;
+      .problem {
+        font-size: 0.8rem;
+        color: #666;
+      }
+    }
+  }
+  .solutionBOx {
+    display: flex;
+    flex-direction: column;
+    background: #f3f3f3;
+    padding: 30px 20px;
+    border-radius: 16px;
+    gap: 30px;
+    .solTitle {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .solMain {
+        font-size: 3.2rem;
+        font-weight: 500;
+      }
+      .tobe {
+        font-size: 1.2rem;
+        font-weight: 600;
+        padding-right: 20px;
+        color: #666;
+      }
+    }
+    .solWrapp {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: 50px;
+      padding: 30px 0;
+    }
+    .solutions {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      .solution {
+        font-size: 1rem;
+      }
     }
   }
 }
