--- a/threadsreset.scss
+++ b/threadsreset.scss
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 * {
   margin: 0;
   padding: 0;
@@ -15,9 +16,16 @@ a {
 }
 
 body {
-  width: 100%;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-size: 1rem;
-  font-family: "Figtree", sans-serif;
-  background: rgb(13, 13, 13);
+  line-height: 1.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo",
+    "Pretendard Variable", Pretendard, Roboto, "Noto Sans KR", "Segoe UI",
+    "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    sans-serif;
+  font-weight: normal;
+  background: rgb(34, 34, 34);
 }
